@startuml

hide empty methods

class User {
    + id: long
    + profileId: String
    + profileUrl: String
}

User -- "*" Bucket
User - "*" Event
User -- "*" Badge

class Counter {
    + id: long
    + name: String
}

Metric "*" - Counter

class Metric {
    + id: long
    + name: String
}

Bucket "*" - Metric

class Bucket {
    + time: Date
    + value: long
}

class BadgeType {
    + id: long
    + name: String
    + color: String
    + image: String
    + isSingleton: boolean
    + parent: BadgeType
}

Badge -- BadgeType

class Badge {
    + id: long
    + awarded: Date
}

class BadgeRule {
    + id: long
    + condition: String
}

BadgeType "1" - BadgeRule : "awards"
Counter "1" -- BadgeRule : "observes"

class EventRule {
    + id: Long
    + types: [String]
    + script: Text
}

Event "*" <. "*" EventRule : "handles"
EventRule ..> "*" Counter : "affects"

class Event {
    + id: long
    + time: Date
    + type: String
    + data: [{String, Int|String}]
}

@enduml